[project]
name = "sqlalchemy-things"
packages = [{include = "sqlalchemy_things", from = "src" }]
version = "1.2.0"
description = "Utility collection for development with SQLalchemy ORM."
license = "MIT"

authors = [
    { name = "Ruslan Ilyasovich Gilfanov", email = "rigilfanov@yandex.ru>" },
]
maintainers = [
    { name = "Ruslan Ilyasovich Gilfanov", email = "rigilfanov@yandex.ru>" },
]

readme = "README.rst"
homepage = "https://github.com/rigilfanov/sqlalchemy-things"
repository = "https://github.com/rigilfanov/sqlalchemy-things"
documentation = "https://sqlalchemy-things.readthedocs.io/"

keywords = ["sqlalchemy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.9,<3.15"
dependencies = [
    "sqlalchemy (>=2.0.45,<3)",
]

[project.optional-dependencies]
mysql = [ "aiomysql>=0.3.2,<1" ]
postgresql = [ "asyncpg>=0.31.0,<1" ]
sqlite = [ "aiosqlite>=0.22.1,<1" ]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.19.1"
pytest = ">=8.4.2"
pytest-asyncio = ">=1.2.0"
pytest-cov = ">=7.0.0"
ruff = '>=0.14.10'
sphinx = ">=7.4.7"
sphinx_rtd_theme = ">=3.0.2"
tomli = { version = "^2.3.0", optional = true, python = "~3.9 || ~3.10" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["example.py", "src", "tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", "ARG002", "COM812", "D", "FA102", "ISC001", "N803", "N806", "PGH003",
    "PLR2004", "RUF001", "RUF002", "RUF003", "RUF012", "Q000",
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*.py" = ["A001", "INP001"]
"tests/*.py" = ["PLR2004", "S101"]

[tool.ruff.lint.isort]
order-by-type = true

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 4
